--- a/Puff/Puff/View/Member.storyboard
+++ b/Puff/Puff/View/Member.storyboard
@@ -44,11 +44,22 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="collectionView" destination="u0i-fb-UHv" id="egd-cs-VVf"/>
+                        <segue destination="sAJ-OR-vla" kind="show" identifier="SegueToStoreRecord" id="Ydy-if-kPE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g5e-W3-99b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="300" y="143"/>
+        </scene>
+        <!--StoreRecord-->
+        <scene sceneID="A72-A5-FFn">
+            <objects>
+                <viewControllerPlaceholder storyboardName="StoreRecord" id="sAJ-OR-vla" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="hor-O9-B9O"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ryq-tI-XBK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1008" y="143"/>
         </scene>
     </scenes>
 </document>
