--- a/Puff/Puff/View/Report.storyboard
+++ b/Puff/Puff/View/Report.storyboard
@@ -25,13 +25,13 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="當日營業回報" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFU-dS-yAW">
                                             <rect key="frame" x="129" y="61" width="156" height="36.5"/>
-                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="26"/>
-                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" name="PingFangTC-Medium" family="PingFang TC" pointSize="26"/>
+                                            <color key="textColor" name="TextGray"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r5D-af-DAn">
                                             <rect key="frame" x="16" y="121.5" width="382" height="52"/>
-                                            <color key="backgroundColor" name="Brown"/>
+                                            <color key="backgroundColor" name="OpenGreen"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="52" id="bcP-dG-kZV"/>
                                             </constraints>
@@ -108,16 +108,88 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U0X-jl-WJr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="pTb-WQ-wE8" customClass="ReprotHeaderView" customModule="Puff" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="425" height="166"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的營業狀況" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHd-MV-JV0">
+                            <rect key="frame" x="140.5" y="16" width="144" height="34"/>
+                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="24"/>
+                            <color key="textColor" name="TextGray"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每日 23：00 前完成營收回報" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HBE-kH-0Ls">
+                            <rect key="frame" x="55.5" y="58" width="314" height="34"/>
+                            <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="24"/>
+                            <color key="textColor" name="TextGray"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今天還沒有營業紀錄喔！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Wx-z7-rks" customClass="PFLabel" customModule="Puff" customModuleProvider="target">
+                            <rect key="frame" x="67.5" y="100" width="290" height="40"/>
+                            <color key="backgroundColor" systemColor="systemGray5Color"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="Y2M-rV-Xh6"/>
+                                <constraint firstAttribute="width" constant="290" id="fRm-GD-GWU"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" name="TextGray"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="topPadding">
+                                    <real key="value" value="16"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="bottomPadding">
+                                    <real key="value" value="16"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                    <real key="value" value="36"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="rightPadding">
+                                    <real key="value" value="36"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </label>
+                    </subviews>
+                    <viewLayoutGuide key="safeArea" id="384-7E-yji"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="2Wx-z7-rks" firstAttribute="centerX" secondItem="pTb-WQ-wE8" secondAttribute="centerX" id="1Ju-co-0g2"/>
+                        <constraint firstItem="2Wx-z7-rks" firstAttribute="top" secondItem="HBE-kH-0Ls" secondAttribute="bottom" constant="8" id="UAh-fm-g7B"/>
+                        <constraint firstItem="wHd-MV-JV0" firstAttribute="top" secondItem="pTb-WQ-wE8" secondAttribute="top" constant="16" id="dgS-4Q-7tD"/>
+                        <constraint firstItem="HBE-kH-0Ls" firstAttribute="centerX" secondItem="pTb-WQ-wE8" secondAttribute="centerX" id="nQR-o9-Oje"/>
+                        <constraint firstItem="wHd-MV-JV0" firstAttribute="centerX" secondItem="pTb-WQ-wE8" secondAttribute="centerX" id="stB-lt-Ioa"/>
+                        <constraint firstItem="HBE-kH-0Ls" firstAttribute="top" secondItem="wHd-MV-JV0" secondAttribute="bottom" constant="8" id="wvT-Mo-Hde"/>
+                    </constraints>
+                    <connections>
+                        <outlet property="statusLabel" destination="2Wx-z7-rks" id="n7S-Uf-Ucg"/>
+                        <outlet property="subtitleLabel" destination="HBE-kH-0Ls" id="xKW-bC-cqH"/>
+                        <outlet property="titleLabel" destination="wHd-MV-JV0" id="Jlu-VZ-swH"/>
+                    </connections>
+                </view>
             </objects>
             <point key="canvasLocation" x="115.94202898550725" y="89.732142857142847"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="2Wx-z7-rks">
+            <size key="intrinsicContentSize" width="191" height="20.5"/>
+        </designable>
+    </designables>
     <resources>
-        <namedColor name="Brown">
-            <color red="0.50199997425079346" green="0.31000000238418579" blue="0.1289999932050705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="OpenGreen">
+            <color red="0.36500000953674316" green="0.67500001192092896" blue="0.19599999487400055" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TextGray">
+            <color red="0.33300000429153442" green="0.33300000429153442" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
