--- a/Puff/Puff/View/Nib/Cell/Calendar/CalendarCollectionViewCell.xib
+++ b/Puff/Puff/View/Nib/Cell/Calendar/CalendarCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,9 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarCollectionViewCell" id="gTV-IL-0wX" customClass="CalendarCollectionViewCell" customModule="Puff" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarCollectionViewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="CalendarCollectionViewCell" customModule="Puff" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-            <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -20,58 +20,81 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3v-qn-wds">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSo-dd-CDi">
-                                <rect key="frame" x="4" y="12" width="42" height="18.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mz0-tk-DU4">
-                                <rect key="frame" x="21.5" y="38.5" width="7.5" height="7.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Mz0-tk-DU4" secondAttribute="height" multiplier="1:1" id="HJO-Ey-S4U"/>
-                                </constraints>
-                            </view>
                             <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bvn-Ys-4Gh">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="1"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="FPl-ao-7fd"/>
+                                    <constraint firstAttribute="height" constant="1" id="7Uz-OG-PxA"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eYW-km-0pf">
+                                <rect key="frame" x="7" y="7" width="36" height="36"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tn2-bd-AO9">
+                                        <rect key="frame" x="15.5" y="27" width="5" height="5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Tn2-bd-AO9" secondAttribute="height" multiplier="1:1" id="HuF-OE-bbP"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CEy-Zc-wDi">
+                                        <rect key="frame" x="2" y="6" width="32" height="15"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="Main"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="CEy-Zc-wDi" secondAttribute="trailing" constant="2" id="1q9-e1-2pp"/>
+                                    <constraint firstItem="CEy-Zc-wDi" firstAttribute="leading" secondItem="eYW-km-0pf" secondAttribute="leading" constant="2" id="CDj-96-0Db"/>
+                                    <constraint firstItem="CEy-Zc-wDi" firstAttribute="centerX" secondItem="eYW-km-0pf" secondAttribute="centerX" id="QOb-19-J5r"/>
+                                    <constraint firstItem="CEy-Zc-wDi" firstAttribute="top" secondItem="eYW-km-0pf" secondAttribute="top" constant="6" id="Qft-r8-oTr"/>
+                                    <constraint firstItem="Tn2-bd-AO9" firstAttribute="top" secondItem="CEy-Zc-wDi" secondAttribute="bottom" constant="6" id="YPn-H6-6Ns"/>
+                                    <constraint firstAttribute="bottom" secondItem="Tn2-bd-AO9" secondAttribute="bottom" constant="4" id="gbw-qT-58t"/>
+                                    <constraint firstItem="Tn2-bd-AO9" firstAttribute="centerX" secondItem="eYW-km-0pf" secondAttribute="centerX" id="txL-SW-ycS"/>
+                                    <constraint firstItem="Tn2-bd-AO9" firstAttribute="width" secondItem="eYW-km-0pf" secondAttribute="width" multiplier="0.142857" id="zTK-4Y-Z4D"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="Background"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="Mz0-tk-DU4" secondAttribute="bottom" constant="4" id="49G-la-GOy"/>
-                            <constraint firstItem="Mz0-tk-DU4" firstAttribute="centerX" secondItem="W3v-qn-wds" secondAttribute="centerX" id="9hp-KW-6rk"/>
-                            <constraint firstItem="Mz0-tk-DU4" firstAttribute="width" secondItem="W3v-qn-wds" secondAttribute="width" multiplier="0.15" id="Owb-ad-ian"/>
-                            <constraint firstItem="bvn-Ys-4Gh" firstAttribute="leading" secondItem="W3v-qn-wds" secondAttribute="leading" id="Pk3-7g-S1G"/>
-                            <constraint firstItem="bvn-Ys-4Gh" firstAttribute="top" secondItem="W3v-qn-wds" secondAttribute="top" id="VeB-MH-Tve"/>
-                            <constraint firstAttribute="trailing" secondItem="bvn-Ys-4Gh" secondAttribute="trailing" id="Vki-QN-bSG"/>
-                            <constraint firstItem="xSo-dd-CDi" firstAttribute="top" secondItem="bvn-Ys-4Gh" secondAttribute="top" constant="12" id="WGD-k3-4X9"/>
-                            <constraint firstItem="xSo-dd-CDi" firstAttribute="leading" secondItem="W3v-qn-wds" secondAttribute="leading" constant="4" id="Zgk-Sn-lZU"/>
-                            <constraint firstAttribute="trailing" secondItem="xSo-dd-CDi" secondAttribute="trailing" constant="4" id="fW7-J9-fnR"/>
-                            <constraint firstItem="Mz0-tk-DU4" firstAttribute="top" secondItem="xSo-dd-CDi" secondAttribute="bottom" constant="8" symbolic="YES" id="naJ-vq-Klz"/>
+                            <constraint firstAttribute="trailing" secondItem="bvn-Ys-4Gh" secondAttribute="trailing" id="9xM-sA-KQu"/>
+                            <constraint firstItem="bvn-Ys-4Gh" firstAttribute="leading" secondItem="W3v-qn-wds" secondAttribute="leading" id="HHI-hV-eB4"/>
+                            <constraint firstItem="bvn-Ys-4Gh" firstAttribute="top" secondItem="W3v-qn-wds" secondAttribute="top" id="LrG-4A-9Q3"/>
+                            <constraint firstItem="eYW-km-0pf" firstAttribute="centerX" secondItem="W3v-qn-wds" secondAttribute="centerX" id="Qfy-Se-duC"/>
+                            <constraint firstItem="eYW-km-0pf" firstAttribute="top" secondItem="bvn-Ys-4Gh" secondAttribute="bottom" constant="6" id="aPU-AS-9zh"/>
+                            <constraint firstItem="eYW-km-0pf" firstAttribute="leading" secondItem="W3v-qn-wds" secondAttribute="leading" constant="7" id="gkC-fx-eAa"/>
+                            <constraint firstAttribute="trailing" secondItem="eYW-km-0pf" secondAttribute="trailing" constant="7" id="lvj-bu-pP3"/>
+                            <constraint firstAttribute="bottom" secondItem="eYW-km-0pf" secondAttribute="bottom" constant="7" id="tlY-Xl-cZ3"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="W3v-qn-wds" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="8hG-aE-vIY"/>
-                <constraint firstAttribute="trailing" secondItem="W3v-qn-wds" secondAttribute="trailing" id="Xgv-RS-69M"/>
-                <constraint firstAttribute="bottom" secondItem="W3v-qn-wds" secondAttribute="bottom" id="oTq-8k-mQ5"/>
-                <constraint firstItem="W3v-qn-wds" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xpD-h7-nwL"/>
+                <constraint firstItem="W3v-qn-wds" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="0Kf-kD-Hg5"/>
+                <constraint firstItem="W3v-qn-wds" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9hl-Y7-nzO"/>
+                <constraint firstAttribute="trailing" secondItem="W3v-qn-wds" secondAttribute="trailing" id="Wcg-27-KrS"/>
+                <constraint firstAttribute="bottom" secondItem="W3v-qn-wds" secondAttribute="bottom" id="qwV-Pz-XSU"/>
             </constraints>
+            <size key="customSize" width="76" height="64"/>
             <connections>
-                <outlet property="dateLabel" destination="xSo-dd-CDi" id="ARZ-50-zbN"/>
-                <outlet property="eventView" destination="Mz0-tk-DU4" id="vaI-Gw-hAw"/>
+                <outlet property="cellIsSelectedView" destination="eYW-km-0pf" id="dqp-qw-sMz"/>
+                <outlet property="dateLabel" destination="CEy-Zc-wDi" id="i9e-Sg-Yu4"/>
+                <outlet property="eventView" destination="Tn2-bd-AO9" id="xmQ-p7-DeO"/>
                 <outlet property="topBorderLineView" destination="bvn-Ys-4Gh" id="J1i-EZ-cdf"/>
             </connections>
-            <point key="canvasLocation" x="-146.37681159420291" y="-21.428571428571427"/>
+            <point key="canvasLocation" x="-127.53623188405798" y="-16.741071428571427"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <namedColor name="Background">
+            <color red="0.99699997901916504" green="0.93999999761581421" blue="0.78600001335144043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Main">
+            <color red="1" green="0.65100002288818359" blue="0.14900000393390656" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
